# openhost

./: .gitignore  .pre-commit-config.yaml  README.md  claude.md  conftest.py  dash_underscore_changes.md  litestar_migration_ai_generated.md  migrations.json  pyproject.toml  style_guide.md
apps/oauth_provider/: Dockerfile  openhost.toml  pyproject.toml
apps/oauth_provider/src/oauth_provider/: app.py
apps/oauth_provider/src/oauth_provider/core/: config.py  credentials.py  models.py  permissions.py  providers.py  tokens.py
apps/oauth_provider/src/oauth_provider/templates/: device.html
compute_space/: pyproject.toml
compute_space/compute_space/: __init__.py  __main__.py  config.py  testing.py
compute_space/compute_space/core/: apps.py  archive_backend.py  auth.py  caddy.py  containers.py  data.py  git_ops.py  identity.py  logging.py  manifest.py  permissions.py  permissions_v2.py  ports.py  runtime_sentinel.py  security.py  services.py  services_v2.py  startup.py  storage.py  terminal.py  updates.py  util.py  version_resolution.py
compute_space/compute_space/core/runtimes/: __init__.py  base.py  docker.py  factory.py
compute_space/compute_space/core/templates/: zonefile
compute_space/compute_space/core/tls/: acquire_cert.py  util.py
compute_space/compute_space/db/: __init__.py  alembic.ini  connection.py  legacy_migrate.py  migrations.py  models.py  schema.sql
compute_space/compute_space/db/alembic/: env.py
compute_space/compute_space/db/migrations/: 0001_initial.sql  0002_dummy.py
compute_space/compute_space/db/versioned/: __init__.py  base.py  registry.py  runner.py
compute_space/compute_space/web/: app.py  middleware.py  proxy.py  start.py
compute_space/compute_space/web/routes/: proxy.py  services.py  services_v2.py
compute_space/compute_space/web/templates/: add_app.html  app_detail.html  approve_permissions_v2.html  dashboard.html  layout.html  logs.html  settings.html  system.html
compute_space/src/compute_space/: __init__.py  config.py  local_stack.py  testing.py
compute_space/src/compute_space/core/: app_id.py  apps.py  archive_backend.py  auth.py  caddy.py  containers.py  data.py  default_apps.py  diagnostics.py  dns.py  domain_store.py  git_ops.py  image_pruner.py  installer.py  logging.py  manifest.py  oauth.py  permissions.py  permissions_v2.py  pinned_binaries.toml  pinned_binary.py  ports.py  runtime_sentinel.py  security.py  services.py  services_v2.py  startup.py  storage.py  system_agent.py  terminal.py  util.py
compute_space/src/compute_space/db/: __init__.py  connection.py  migrations.py  schema.py  schema.sql  schema_legacy.sql
compute_space/src/compute_space/tests/: _litestar_helpers.py  conftest.py  container.py  local_stack.py  schema_helpers.py  test_acquire_cert_broker.py  test_add_app_page.py  test_api_archive_backend.py  test_api_storage_settings.py  test_app_archive.py  test_app_certs.py  test_app_id.py  test_app_links.py  test_app_status.py  test_app_submodules.py  test_archive_backend.py  test_archive_backend_edge_cases.py  test_auth.py  test_build_cache.py  test_caddy_multidomain.py  test_caddyfile.py  test_cert_api_client.py  test_cert_provider_config.py  test_cert_renewal.py  test_check_app_status.py  test_connection_origin.py  test_containers.py  test_cors_preflight.py  test_dashboard_title.py  test_data_provision_tls.py  test_default_apps.py  test_diagnostics.py  test_diagnostics_containers.py  test_dns.py  test_docs.py  test_domain_store.py  test_domains.py  test_domains_api.py  test_email_config.py  test_email_dns_config_edge.py  (+50 more)
compute_space/src/compute_space/web/: app.py  middleware.py  proxy.py  setup_app.py  start.py
compute_space/tests/: _migration_helpers.py  _snapshot_harness.py  conftest.py  container.py  helpers.py  test_ansible_templates.py  test_api_archive_backend.py  test_app_archive.py  test_app_status.py  test_archive_backend.py  test_auth.py  test_build_cache.py  test_containers.py  test_containers_delegation.py  test_containers_mounts.py  test_data_rmtree.py  test_deploy_app_background.py  test_docker_cache.py  test_docker_runtime.py  test_insert_and_deploy.py  test_integration.py  test_legacy_migrations.py  test_manifest.py  test_migration_snapshots.py  test_migrations.py  test_parse_repo_url.py  test_podman_availability.py  test_podman_migration.py  test_ports.py  test_remove_app_background.py  test_remove_app_route.py  test_rename_app.py  test_runtime_factory.py  test_runtime_sentinel.py  test_services_v2.py  test_settings_host_prep.py  test_start_app_process.py  test_storage.py  test_token_hashing.py  test_versioned_migrations.py  (+2 more)
compute_space/tests/fixtures/migrations/: regenerate.py
compute_space/tests/fixtures/test_app/: server.py
compute_space/tests/snapshots/empty/: v0001.sql  v0002.sql  v0004.sql
compute_space/tests/snapshots/owner_null_password/: v0004.sql  v0005.sql
compute_space/tests/snapshots/service_with_ports/: v0001.sql  v0002.sql  v0004.sql  v0005.sql
compute_space_cli/: README.md  pyproject.toml
compute_space_cli/compute_space_cli/: config.py  helpers.py  main.py
compute_space_cli/src/compute_space_cli/: helpers.py  main.py
compute_space_cli/src/compute_space_cli/tests/: e2e.py  test_config.py  test_curl_args.py  test_diagnostics_cli.py  test_make_api_request.py  test_wait_helpers.py
compute_space_cli/tests/: test_config.py  test_wait_helpers.py
openhost_system_agent/: README.md  pyproject.toml
openhost_system_agent/src/openhost_system_agent/: apply_after_checkout.py  cli.py  main.py  pixi.py  protocol.py  reclaim.py  status.py  update.py
openhost_system_agent/src/openhost_system_agent/migrations/: README.md  base.py  helpers.py  migration_log.py  migration_tags.json  registry.py  runner.py
openhost_system_agent/src/openhost_system_agent/tests/: Dockerfile.migration_test  test_apply_after_checkout.py  test_apply_walk_e2e.py  test_migration_container.py  test_migration_journald.py  test_migration_log.py  test_migration_remove_hairpin.py  test_pixi.py  test_reclaim.py  test_runner.py  test_service_unit.py  test_status.py  test_update.py
(+422 files in other folders)
