[project]
name = "oh"
version = "0.1.0"
description = "OpenHost CLI — manage apps on your compute space"
requires-python = ">=3.12"
dependencies = [
    "attrs",
    "cappa",
    "httpx",
    "tomli-w",
]

[project.scripts]
oh = "compute_space_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compute_space_cli"]

[tool.uv]
# Don't manage this subproject with uv — it ships standalone via
# `pip install git+https://.../openhost.git#subdirectory=compute_space_cli`.
managed = false
