[project]
name = "oh"
version = "0.1.0"
description = "OpenHost CLI — manage apps on your compute space"
requires-python = ">=3.12"
dependencies = [
    "attrs",
    "cappa",
    "httpx",
    "tomli-w",
]

[project.scripts]
oh = "compute_space_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compute_space_cli"]

[tool.uv]
# Don't manage this subproject with uv; the pyproject.toml is just to make it installable via pip with a git URL.
# otherwise since we rarely run uv from this subdir, the lockfile is liable to get out of date.
# ideally we'd use some sort of proper workspace management but we don't now.
managed = false
