[project]
name = "oauth-provider"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "litestar[jinja]>=2.0",
    "uvicorn>=0.34",
    "httpx>=0.27",
    "attrs>=23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oauth_provider"]
